--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fafafa;
+    background-color: rgb(36, 36, 34);
     min-height: 100%;
     width: 100%;
     height: 100%;
