--- a/src/styles.css
+++ b/src/styles.css
@@ -10,11 +10,10 @@ body {
     margin: 0;
 }
 
-
 html {
     height: 100%;
-  }
-  
+}
+
 canvas {
     display: block;
     margin: auto;
@@ -23,4 +22,66 @@ canvas {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.15);
+}
+
+.slider {
+    box-sizing: border-box;
+    cursor: pointer;
+    height: 30px;
+    width: 200px;
+    margin: 0 6px;
+    outline: none;
+    position: relative;
+}
+
+.slider:before {
+    background-color: grey;
+    border-radius: 1px;
+    bottom: 0;
+    content: '';
+    display: block;
+    height: 2px;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.slider-indicator {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+.slider-indicator:before {
+    background-color: white;
+    border-radius: 1px;
+    bottom: 0;
+    content: '';
+    display: block;
+    height: 2px;
+    left: 0;
+    margin-bottom: auto;
+    margin-top: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.slider-indicator:after {
+    background-color: rgb(36, 36, 34);
+    border-radius: 1px;
+    border: 1px solid white;
+    bottom: 0;
+    content: '';
+    display: block;
+    height: 12px;
+    margin-bottom: auto;
+    margin-top: auto;
+    position: absolute;
+    right: -6px;
+    top: 0;
+    width: 12px;
 }
