--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     flex-direction: row;
     margin: 0;
+    position: relative;
 }
 
 html {
@@ -116,4 +117,24 @@ canvas {
     background: red;
     border-radius: 100%;
     cursor: pointer;
+}
+
+.timeline {
+    position: fixed;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(26, 26, 24);
+    padding: 10px;
+    overflow-x: scroll;
+}
+
+.frame {
+    height: 180px;
+    width: 180px;
+}
+
+.frame + .frame {
+    margin-left: 10px;
 }
